Offline PWA support, remove ads, add analytics, fix bouncing on iOS.

--- a/web/styles.scss
+++ b/web/styles.scss
@@ -1,6 +1,18 @@
 // ## FONTS ##
 
-@import url('https://fonts.googleapis.com/css?family=Rubik');
+@font-face {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Rubik'), local('Rubik-Regular'), url(fonts/Rubik-Regular.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Rubik Bold'), local('Rubik-Bold'), url(fonts/Rubik-Bold.ttf) format('truetype');
+}
 
 // ## VARIABLES ##
 
@@ -42,6 +54,7 @@ $popup-z: 50;
 * {
     box-sizing: border-box;
 
+    -webkit-overflow-scrolling: auto;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-user-select: none;
     user-select: none;
@@ -156,27 +169,6 @@ html, body {
     opacity: 0.3;
 
     @include small-text-common();
-}
-
-.ad-disclaimer {
-    padding-top: 24px;
-    padding-bottom: 8px;
-    width: 100%;
-
-    font-size: 16px;
-
-    opacity: 0.3;
-
-    @include small-text-common();
-}
-
-.ad {
-    display: block;
-    width: 468px;
-    margin-left: auto;
-    margin-right: auto;
-
-    border: 0;
 }
 
 // ## GAME STYLES ##
